# rw-django-ninja

./: pyproject.toml  pytest.ini
.github/workflows/: django.yml
accounts/: api.py  models.py  schemas.py  tests.py
accounts/migrations/: 0001_initial.py
articles/: admin.py  api.py  filters.py  models.py  schemas.py  tests.py
articles/migrations/: 0001_initial.py
comments/: models.py  schemas.py  tests.py
core/: settings.py  urls.py
helpers/: auth.py  empty.py  exceptions.py
image_server/: api.py  models.py  tests.py
tests/: conftest.py  test_first.py
tests/test_accounts/: test_models.py
